# stuntsengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  clean_repo.sh  migrate_externs.py
cmake/: run_tests.cmake  toolchain-mingw-w64-x86_64.cmake
docs/: 3d_engine.md  engine_design.md  render_design.md  ressources.md  sound_design.md
include/: audio.h  carstate.h  data_core.h  data_game.h  data_menu_track.h  font.h  framebuffer.h  game.h  game_timing.h  game_types.h  highscore.h  keyboard.h  math.h  memmgr.h  menu.h  mouse.h  opl2.h  render.h  ressources.h  shape2d.h  shape3d.h  stunts.h  timer.h  track.h  ui.h  ui_colors.h  ui_keys.h  ui_screen.h  ui_widgets.h
src/: audio.c  carstate.c  data_core.c  data_game.c  data_menu_track.c  data_runtime.c  font.c  frame.c  framebuffer.c  gamemech.c  highscore.c  keyboard.c  math.c  memmgr.c  menu.c  mouse.c  opl2.c  render.c  ressources.c  shape2d.c  shape3d.c  stuntsengine.c  timer.c  track.c  track_object.c  ui.c  ui_screen.c  ui_widgets.c  video.c
tests/: test_carstate_pure.cc  test_data_tables.cc  test_font.cc  test_framebuffer.cc  test_header_centralization.cc  test_hill_terrain_render.cc  test_hill_terrain_render_stubs.c  test_intro_music_audio.cc  test_math.cc  test_memmgr_stub.cc  test_polygon_render_image.cc  test_ressources.cc  test_ressources_stubs.c  test_sdl_audio_tone.cc  test_shape2d_pure.cc  test_shape2d_pure_stubs.c  test_shape2d_resource.cc  test_shape3d_core.cc  test_shape3d_layout.cc  test_shape3d_pipeline.cc  test_shape3d_pointer_table_regression.cc  test_shape3d_polyinfo.cc  test_shape3d_resource.cc  test_steering.cc  test_string_format.cc  test_terrain_track_frame_check.cc  test_timer.cc  test_track_decode.cc  test_ui_keys.cc  test_ui_screen.cc  test_ui_screen_stubs.c  test_ui_widgets_pure.cc
